init && add image and http library && test ins api

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="login"
         android:id="@+id/login"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="match_parent"
