--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.qjizho.inspmarker.activity.MainActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/frag"
-        android:name="com.qjizho.inspmarker.activity.FragmentLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </fragment>
+    </FrameLayout>
 
 </RelativeLayout>
