--- a/app/src/main/res/layout/fragment_gridview.xml
+++ b/app/src/main/res/layout/fragment_gridview.xml
@@ -1,32 +1,34 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qjizho.inspmarker.activity.MainActivity">
+    android:background="@color/cube_mints_f1f1f1">
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
-        android:id="@+id/rotate_header_grid_view_frame"
-        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/load_more_grid_view_ptr_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/cube_mints_f1f1f1"
-        cube_ptr:ptr_duration_to_close="200"
-        cube_ptr:ptr_duration_to_close_header="1000"
-        cube_ptr:ptr_keep_header_when_refresh="true"
-        cube_ptr:ptr_pull_to_fresh="false"
-        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-        cube_ptr:ptr_resistance="1.7">
+        android:layout_height="match_parent">
 
-        <GridView
-            android:id="@+id/rotate_header_grid_view"
+        <in.srain.cube.views.loadmore.LoadMoreGridViewContainer
+            android:id="@+id/load_more_grid_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/cube_mints_white"
-            android:fadingEdge="none"
-            android:focusable="false"
-            android:listSelector="@android:color/transparent"
-            android:numColumns="3"
-            android:scrollbars="none"
-            android:stretchMode="columnWidth" />
+            android:background="@color/cube_mints_white">
+
+            <in.srain.cube.views.GridViewWithHeaderAndFooter
+                android:id="@+id/load_more_grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fadingEdge="none"
+                android:focusable="false"
+                android:horizontalSpacing="0dp"
+                android:listSelector="@android:color/transparent"
+                android:numColumns="3"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:scrollbarStyle="outsideOverlay"
+                android:stretchMode="columnWidth" />
+
+        </in.srain.cube.views.loadmore.LoadMoreGridViewContainer>
     </in.srain.cube.views.ptr.PtrClassicFrameLayout>
 </RelativeLayout>
