修改大图浏览的布局

--- a/app/src/main/res/layout/jazzy_image.xml
+++ b/app/src/main/res/layout/jazzy_image.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@color/cube_mints_f1f1f1"
-        android:padding="0.5dp">
-
+        android:padding="0.5dp"
+        android:layout_centerInParent="true"
+        >
         <in.srain.cube.image.CubeImageView
             android:id="@+id/with_grid_view_item_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
             android:orientation="horizontal"
-            android:background="#60000000">
+            android:background="@drawable/profile_bg">
             <in.srain.cube.image.CubeImageView
                 android:id="@+id/user_profile_pic"
                 android:layout_marginLeft="12dp"
@@ -39,6 +38,6 @@
                 android:layout_height="48dp"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
