--- a/app/src/main/res/layout/user_profile_header_layout.xml
+++ b/app/src/main/res/layout/user_profile_header_layout.xml
@@ -1,39 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@color/cube_mints_f1f1f1">
-
-      <in.srain.cube.image.CubeImageView
+    android:layout_height="wrap_content"
+    android:background="@color/cube_mints_f1f1f1"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+        <in.srain.cube.image.CubeImageView
             android:id="@+id/header_profile_pic"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
-        <TextView
-            android:id="@+id/header_name"
-            android:layout_toRightOf="@+id/header_profile_pic"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="20dp"
-            android:textColor="@color/cube_mints_black"
-            android:textSize="16sp"/>
-        <TextView
-            android:id="@+id/header_full_name"
-            android:layout_toRightOf="@+id/header_name"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:layout_centerVertical="true"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/header_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/header_posts"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/string_post"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/header_followers"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/string_followers"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/header_following"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/string_followering"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/cube_mints_333333"
-            android:layout_height="20dp" />
-        <TextView
-            android:id="@+id/bio"
-            android:layout_toRightOf="@+id/header_profile_pic"
-            android:layout_below="@+id/header_name"
-            android:layout_width="match_parent"
-            android:textColor="@color/cube_mints_333333"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="50dp" />
-</RelativeLayout>
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="25dp"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/header_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/header_bio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/header_website"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
