--- a/app/src/main/res/layout/user_profile_header_layout.xml
+++ b/app/src/main/res/layout/user_profile_header_layout.xml
@@ -87,17 +87,23 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="25dp"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/plus_texts"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/header_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/header_bio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/header_website"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/header_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/header_bio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/header_website"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 </LinearLayout>
